alignment fix

--- a/style.css
+++ b/style.css
@@ -72,6 +72,9 @@ h3 {
     font-size:1.5rem;
     grid-column: 2;
 }
+.logo > h3 {
+    margin-left: 0;
+}
 
 .header {
     grid-column: 2;
@@ -187,7 +190,7 @@ button {
     background-color: #38bdf8;
     color: white;
     height: 40px;
-    width: 100px;
+    width: 85px;
     border: none;
     border-radius: 15px;
 }
